# OpenAIApiAssistants

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/api/: assistants.rs  messages.rs  mod.rs  threads.rs
