[package]
name = "openai_api_assistants"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sled = "0.34.7"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
tracing = { version = "*", features = [
  "release_max_level_info",
  "max_level_debug",
] }
